<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ScrollView android:id="@+id/activity_vjezbe_guranja" android:layout_width="wrap_content" android:layout_height="match_parent">
        <RelativeLayout android:id="@+id/content_container" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <View android:id="@+id/_bg__vje_be_guranja" android:background="@drawable/_bg__vje_be_guranja_shape" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="375dp" android:layout_height="667dp"/>
            <RelativeLayout android:id="@+id/button" android:layout_marginTop="551dp" android:layout_marginStart="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <View android:id="@+id/bg" android:background="@drawable/bg_shape" android:layout_marginStart="10.5dp" android:layout_marginTop="0dp" android:layout_width="323.57dp" android:layout_height="53dp"/>
                <TextView android:id="@+id/start_training" android:fontFamily="Poppins" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="16.36sp" android:textColor="@color/start_training_color" android:layout_marginLeft="78.4dp" android:layout_marginTop="16.32dp" android:layout_width="196.17932701111dp" android:layout_height="31.179327011108dp" android:text="@string/start_training_string"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/group_211" android:layout_marginTop="48dp" android:layout_marginStart="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@+id/title" android:fontFamily="Open Sans" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="14sp" android:textColor="@color/title_color" android:layout_marginLeft="24dp" android:layout_marginTop="41dp" android:layout_width="305dp" android:layout_height="59.23dp" android:text="@string/titles_string"/>
                <TextView android:id="@+id/workout_categories" android:fontFamily="Poppins" android:textStyle="bold" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="25.98sp" android:textColor="@color/bg_color" android:layout_marginLeft="-4dp" android:layout_marginTop="0dp" android:layout_width="362.48069499969dp" android:layout_height="47.600694999695dp" android:text="@string/workout_categories_string"/>
            </RelativeLayout>
            <ImageView android:id="@+id/rectangle_306" android:src="@drawable/rectangle_306" android:contentDescription="@string/rectangle_306" android:layout_marginStart="25dp" android:layout_marginTop="203dp" android:layout_width="109dp" android:layout_height="74dp"/>
            <TextView android:id="@+id/bench_press_na_kosoj_klupi_sa_bu_icama_4x10" android:fontFamily="Poppins" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="16.36sp" android:shadowRadius="4" android:shadowColor="#000000" android:shadowDx="0" android:shadowDy="4" android:textColor="@color/bg_color" android:layout_marginLeft="192dp" android:layout_marginTop="203dp" android:layout_width="128.17932701111dp" android:layout_height="85.179327011108dp" android:text="@string/bench_press_na_kosoj_klupi_sa_bu_icama_4x10_string"/>
            <ImageView android:id="@+id/rectangle_307" android:src="@drawable/rectangle_307" android:contentDescription="rectangle_307" android:layout_marginStart="25dp" android:layout_marginTop="308dp" android:layout_width="114dp" android:layout_height="65dp"/>
            <TextView android:id="@+id/potisak_za_ramena_sa_bu_icama_3x10" android:fontFamily="Poppins" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="16.36sp" android:shadowRadius="4" android:shadowColor="#000000" android:shadowDx="0" android:shadowDy="4" android:textColor="@color/bg_color" android:layout_marginStart="177dp" android:layout_marginTop="301dp" android:layout_width="167.17932701111dp" android:layout_height="76.179327011108dp" android:text="@string/potisak_za_ramena_sa_bu_icama_3x10_string"/>
            <ImageView android:id="@+id/rectangle_308" android:src="@drawable/rectangle_308" android:contentDescription="rectangle_308" android:layout_marginStart="25dp" android:layout_marginTop="404dp" android:layout_width="114dp" android:layout_height="80dp"/>
            <TextView android:id="@+id/triceps_povla_enje_3x12" android:fontFamily="Poppins" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="16.36sp" android:shadowRadius="4" android:shadowColor="#000000" android:shadowDx="0" android:shadowDy="4" android:textColor="@color/bg_color" android:layout_marginLeft="177dp" android:layout_marginTop="404dp" android:layout_width="159.17932701111dp" android:layout_height="91.179327011108dp" android:text="@string/triceps_povla_enje_3x12_string"/>
        </RelativeLayout>
    </ScrollView>
</HorizontalScrollView>