<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="wrap_content">
  <ScrollView android:id="@+id/activity_vjezba" android:layout_width="wrap_content" android:layout_height="match_parent">
        <RelativeLayout android:id="@+id/content_container" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <View android:id="@+id/_bg__prijava" android:background="@drawable/_bg__prijava_shape" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="360dp" android:layout_height="800dp"/>
            <View android:id="@+id/rectangle_306" android:background="@drawable/rectangle_306_shape" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="360dp" android:layout_height="800dp"/>
            <TextView android:id="@+id/sing_in" android:textStyle="bold" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="25.98sp" android:textColor="@color/sing_in_color" android:layout_marginLeft="14dp" android:layout_marginTop="152dp" android:layout_width="337dp" android:layout_height="48.780694999695dp" android:text="@string/sing_in_string"/>
            <RelativeLayout android:id="@+id/input_1" android:layout_marginTop="207dp" android:layout_marginStart="24dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <View android:id="@+id/input" android:background="@drawable/input_shape" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="313.87dp" android:layout_height="53dp"/>
                <TextView android:id="@+id/phone___email" android:textSize="13.47sp" android:textColor="@color/phone___email_color" android:layout_marginLeft="20.98dp" android:layout_marginTop="0dp" android:layout_width="121.0259161377dp" android:layout_height="62.735916137695dp" android:text="@string/phone___email_string"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/input_2" android:layout_marginTop="284dp" android:layout_marginStart="24dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <View android:id="@+id/input_ek1" android:background="@drawable/input_ek1_shape" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="313.87dp" android:layout_height="53dp"/>
                <TextView android:id="@+id/phone___email_ek1" android:textSize="13.47sp" android:textColor="@color/phone___email_color" android:layout_marginLeft="20.98dp" android:layout_marginTop="0dp" android:layout_width="121.0259161377dp" android:layout_height="62.735916137695dp" android:text="@string/phone___email_ek1_string"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/button" android:layout_marginTop="374dp" android:layout_marginStart="24dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <View android:id="@+id/bg" android:background="@drawable/bg_shape" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="312dp" android:layout_height="55dp"/>
                <TextView android:id="@+id/start_training" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="16.36sp" android:textColor="@color/_bg__prijava_color" android:layout_marginLeft="141.4dp" android:layout_marginTop="35.32dp" android:layout_width="36.179327011108dp" android:layout_height="31.179327011108dp" android:text="@string/start_training_string"/>
            </RelativeLayout>
            <TextView android:id="@+id/activity_vjezba" android:textStyle="bold" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="16.36sp" android:textColor="@color/prijava_color" android:layout_marginLeft="107dp" android:layout_marginTop="365dp" android:layout_width="130.17932701111dp" android:layout_height="88.179327011108dp" android:text="@string/prijava_string"/>
            <RelativeLayout android:id="@+id/button_ek1" android:layout_marginTop="442dp" android:layout_marginStart="22dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <View android:id="@+id/bg_ek1" android:background="@drawable/bg_ek1_shape" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="314dp" android:layout_height="56dp"/>
                <TextView android:id="@+id/start_training_ek1" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="16.36sp" android:textColor="@color/_bg__prijava_color" android:layout_marginLeft="141.4dp" android:layout_marginTop="35.32dp" android:layout_width="38.179327011108dp" android:layout_height="31.179327011108dp" android:text="@string/start_training_ek1_string"/>
                <TextView android:id="@+id/registracija" android:textStyle="bold" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="16.36sp" android:textColor="@color/prijava_color" android:layout_marginLeft="-3dp" android:layout_marginTop="-22dp" android:layout_width="327.17932701111dp" android:layout_height="112.17932701111dp" android:text="@string/registracija_string"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</HorizontalScrollView>