<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/black">

    <RelativeLayout
        android:id="@+id/group_211"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">

        <ImageView
            android:id="@+id/rectangle_317"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ikona10"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="Vježbe za noge"
            android:textSize="22sp"
            android:textColor="@color/title_color"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/workout_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="28dp"
            android:text="@string/titles_string"
            android:textSize="16sp"
            android:textColor="@color/input_color"
            android:gravity="center"/>
    </RelativeLayout>


    <ScrollView
        android:id="@+id/activity_vjezbe_guranja"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Background -->
            <View
                android:id="@+id/_bg__vje_be_guranja"
                android:background="@drawable/_bg__vje_be_guranja_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <!-- Exercise Items -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Exercise 1 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:id="@+id/rectangle_309"
                        android:src="@drawable/rectangle_309"
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="16dp"/>

                    <TextView
                        android:id="@+id/bench_press_na_kosoj_klupi_sa_bu_icama_4x10"
                        android:fontFamily="Poppins"
                        android:textSize="18sp"
                        android:textColor="@color/input_color"
                        android:text="@string/rectangle_309"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="25dp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Exercise 2 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp">

                    <ImageView
                        android:id="@+id/rectangle_310"
                        android:src="@drawable/rectangle_310"
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="16dp"/>

                    <TextView
                        android:id="@+id/potisak_za_ramena_sa_bu_icama_3x10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="25dp"
                        android:layout_weight="1"
                        android:fontFamily="Poppins"
                        android:text="@string/rectangle_310"
                        android:textColor="@color/input_color"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Exercise 3 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp">

                    <ImageView
                        android:id="@+id/rectangle_311"
                        android:src="@drawable/rectangle_311"
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="16dp"/>

                    <TextView
                        android:id="@+id/triceps_povla_enje_3x12"
                        android:fontFamily="Poppins"
                        android:textSize="18sp"
                        android:textColor="@color/input_color"
                        android:text="@string/rectangle_311"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="25dp"
                        android:gravity="center"/>
                </LinearLayout>

                <Button
                    android:id="@+id/button_13"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="30dp"
                    app:backgroundTint="@color/boja"
                    android:fontFamily="Poppins"
                    android:gravity="center"
                    android:text="@string/start_training_string"
                    android:textColor="@color/input_color"
                    android:textSize="16.36sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
