<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ScrollView
        android:id="@+id/activity_registracija"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Postavka pozadine -->
            <View
                android:id="@+id/_bg__registracija"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:background="@drawable/_bg__registracija_shape"
                android:layout_marginTop="0dp"/>

            <!-- Glavni okvir -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="152dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp">

                <!-- Sadržaj unutar okvira -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Naslov "Sign In" -->
                    <TextView
                        android:id="@+id/sing_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/prijava_string"
                        android:textColor="@color/sing_in_color"
                        android:textSize="25.98sp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                    <!-- Unos 1 -->
                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="63dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:hint="@string/phone___email_string"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:backgroundTint="@android:color/black"
                        android:layout_marginTop="16dp"
                        android:inputType="textEmailAddress"/>

                    <!-- Unos password -->
                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="63dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:hint="@string/phone___email_ek1_string"
                        android:inputType="textPassword"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:backgroundTint="@android:color/black"
                        android:layout_marginTop="8dp"/>

                    <Button
                        android:id="@+id/button_ek1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="24dp"
                        android:backgroundTint="@color/____color"
                        android:text="Prijava" />


                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="24dp"
                        android:backgroundTint="@color/____color"
                        android:text="Registracija" />

                </LinearLayout>
            </FrameLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>